<resources>
    <string name="app_name">get_and_set</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_team_name">Enter Your Team Name</string>
    <string name="name">Name</string>
    <string name="team_name">Team name</string>
    <string name="email_address">Email Address</string>
    <string name="display_text">Display Text</string>
    <string name="your_name">Your name</string>
    <string name="your_country">Your Country of origin</string>
    <string name="display_details">Display Details</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_country_of_origin">your_country_of_origin</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_team_name">Team Name</string>
    <string name="your_level_beginner_expert">Level(Beginner/Expert)</string>
    <string name="submit">Display Details</string>
    <string name="enter_email">Email</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="beginner">Beginner</string>
    <string name="show_text">Show Text</string>
    <string name="team_lollipop">Team Lollipop</string>


</resources>