<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    tools:context=".ChibufirstActivity">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/name"
        android:hint="@string/name"
        android:inputType="textPersonName|textCapWords" />

    <EditText
        android:id="@+id/edit_team"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:autofillHints="@string/name"
        android:hint="@string/team_name"
        android:inputType="text|textCapWords" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_team"
        android:autofillHints="@string/name"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/text_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/button_display"
        android:layout_below="@id/edit_email"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/display_text"
        android:textColor="@android:color/white" />

</RelativeLayout>